# elasticnow-timetracker

./: Cargo.toml  LICENSE  ReadMe.md
.github/: release-drafter.yml
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/cli/: args.rs  config.rs  mod.rs
src/elasticnow/: elasticnow.rs  mod.rs  servicenow.rs  servicenow_structs.rs
