[package]
name = "elasticnow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive", "env"] }
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "5.0.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.28.0", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
